2007-10-20  Tobias Burnus  <burnus@net-b.de>

PR fortran/33818
        * resolve.c (resolve_variable): Check that symbol is in the same
        namespace as the entry function.

2007-10-20  Tobias Burnus  <burnus@net-b.de>

        PR fortran/33818
        * gfortran.dg/entry_dummy_ref_3.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129510 138bc75d-0d04-0410-961f-82ee72b054a4